--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,6 +12,19 @@
   --blue: #018EF8;
 }
 
+.animate-b {
+  animation: bounce 10s infinite;
+}
 
+@keyframes bounce {
+  0%, 100% {
+    transform: translateY(-25%);
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+  }
+  50% {
+    transform: translateY(0);
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+}
 
 
